--- a/source/FFImageLoading.Common/FFImageLoading.csproj
+++ b/source/FFImageLoading.Common/FFImageLoading.csproj
@@ -1,27 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Library</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.2</NetStandardImplicitPackageVersion>
     <AssemblyName>FFImageLoading</AssemblyName>
-    <PackageId>FFImageLoading</PackageId>      
-    <Version>1.0.0</Version>
-    <Authors>Daniel Luberda</Authors>
-    <Company>Daniel Luberda</Company>
-    <Product>FFImageLoading</Product>
-    <PackageId>FFImageLoading</PackageId>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-    <NeutralLanguage>en</NeutralLanguage>
-    <Copyright>Daniel Luberda</Copyright>
   </PropertyGroup>
-
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>portable</DebugType>        
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG</DefineConstants>        
-    <LangVersion>Latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">        
     <DebugSymbols>true</DebugSymbols>
@@ -30,19 +18,5 @@
     <OutputPath>bin\Release</OutputPath>
     <DocumentationFile>bin\Release\FFImageLoading.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591;1587;NU1605</NoWarn>
-    <LangVersion>Latest</LangVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.1" />
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
-  </ItemGroup>
- 
-  <ItemGroup>
-    <Compile Remove="AssemblyTFMAttribute.cs" />
-    <Compile Remove="Helpers\GifHelperBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Helpers\Gif\" />
-  </ItemGroup>
 </Project>
