--- a/source/FFImageLoading.Transformations/FFImageLoading.Transformations.csproj
+++ b/source/FFImageLoading.Transformations/FFImageLoading.Transformations.csproj
@@ -1,21 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Library</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.2</NetStandardImplicitPackageVersion>
+    <RootNamespace>FFImageLoading.Transformations</RootNamespace>
     <AssemblyName>FFImageLoading.Transformations</AssemblyName>
     <PackageId>FFImageLoading.Transformations</PackageId>
-    <Version>1.0.0</Version>
-    <Authors>Daniel Luberda</Authors>
-    <Company>Daniel Luberda</Company>
-    <Product>FFImageLoading</Product>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-    <NeutralLanguage>en</NeutralLanguage>
-    <Copyright>Daniel Luberda</Copyright>  
-    <NoWarn>1701;1702;1705;1591;1587;NU1605</NoWarn>
   </PropertyGroup>
-
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>portable</DebugType>        
@@ -30,11 +21,6 @@
     <DocumentationFile>bin\Release\FFImageLoading.Transformations.xml</DocumentationFile>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>    
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.1" />
-  </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\FFImageLoading.Common\FFImageLoading.csproj" />
   </ItemGroup>
