--- a/nuget/Xamarin.FFImageLoading.Transformations.nuspec
+++ b/nuget/Xamarin.FFImageLoading.Transformations.nuspec
@@ -7,11 +7,10 @@
        <title>FFImageLoading Transformations</title>
        <authors>Daniel Luberda, Molinet Fabien</authors>
        <owners></owners>
-       <licenseUrl>https://raw.githubusercontent.com/luberda-molinet\FFImageLoading/master/LICENSE.md</licenseUrl>
-       <projectUrl>https://github.com/luberda-molinet/FFImageLoading</projectUrl>
-       <iconUrl>https://cdn4.iconfinder.com/data/icons/flat-services-icons/128/startup.png</iconUrl>
+	   <license type="file">LICENSE.txt</license>
+       <projectUrl>https://github.com/inikityuk/Xamarin.FFImageLoading.NET</projectUrl>
        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-       <readme>lib\readme.md</readme>
+       <readme>README.md</readme>
        
        <description>
 Transformations for FFImageLoading library.
@@ -47,8 +46,8 @@ Don't forget to add the package in all platform specific projects. This way the 
         
 	</metadata>
 	<files>
-        <file src="..\README.md" target="lib" />
-
+		<file src="..\README.md" target="" />
+		<file src="..\LICENSE.txt" target="" />
 		<!--Net Standard-->
         <file src="..\source\FFImageLoading.Transformations\bin\Release\net7.0\FFImageLoading.Transformations.dll" target="lib\net7.0\FFImageLoading.Transformations.dll" />
         <file src="..\source\FFImageLoading.Transformations\bin\Release\net7.0\FFImageLoading.Transformations.xml" target="lib\net7.0\FFImageLoading.Transformations.xml" />
