--- a/nuget/Xamarin.FFImageLoading.nuspec
+++ b/nuget/Xamarin.FFImageLoading.nuspec
@@ -7,11 +7,10 @@
 		<title>FFImageLoading Plugin for Xamarin.iOS / Xamarin.Android / Xamarin.Mac / Windows</title>
 		<authors>Daniel Luberda, Fabien Molinet</authors>
 		<owners/>
-		<licenseUrl>https://raw.githubusercontent.com/luberda-molinet\FFImageLoading/master/LICENSE.md</licenseUrl>
-		<projectUrl>https://github.com/luberda-molinet/FFImageLoading</projectUrl>
-		<iconUrl>https://cdn4.iconfinder.com/data/icons/flat-services-icons/128/startup.png</iconUrl>
+		<license type="file">LICENSE.txt</license>
+		<projectUrl>https://github.com/inikityuk/Xamarin.FFImageLoading.NET</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<readme>lib\readme.md</readme>
+		<readme>README.md</readme>
 
 		<description>
 Xamarin Library to load images quickly and easily.
@@ -56,7 +55,8 @@ Features:
 
 	</metadata>
 	<files>
-		<file src="..\README.md" target="lib" />
+		<file src="..\README.md" target="" />
+		<file src="..\LICENSE.txt" target="" />
 		<!--Net Standard-->
 		<file src="..\source\FFImageLoading.Common\bin\Release\net7.0\FFImageLoading.dll" target="lib\net7.0\FFImageLoading.dll" />
 		<file src="..\source\FFImageLoading.Common\bin\Release\net7.0\FFImageLoading.xml" target="lib\net7.0\FFImageLoading.xml" />
