--- a/nuget/Xamarin.FFImageLoading.Transformations.nuspec
+++ b/nuget/Xamarin.FFImageLoading.Transformations.nuspec
@@ -3,7 +3,7 @@
 	<metadata minClientVersion="2.8.1">
    
        <id>Xamarin.FFImageLoading.Transformations.NET</id>
-       <version>1.0.0</version>
+       <version>1.0.1</version>
        <title>FFImageLoading Transformations</title>
        <authors>Daniel Luberda, Molinet Fabien</authors>
        <owners></owners>
@@ -30,16 +30,16 @@ Don't forget to add the package in all platform specific projects. This way the 
        
        <dependencies>
        
-       <group targetFramework="net7.0-ios16.1">
-                <dependency id="Xamarin.FFImageLoading.NET" version="1.0.0" />
+       <group targetFramework="net8.0-ios17.2">
+                <dependency id="Xamarin.FFImageLoading.NET" version="1.0.1" />
             </group>
 
-			<group targetFramework="net7.0-android33.0">
-                <dependency id="Xamarin.FFImageLoading.NET" version="1.0.0" />
+			<group targetFramework="net8.0-android34.0">
+                <dependency id="Xamarin.FFImageLoading.NET" version="1.0.1" />
 			</group>
 
-			<group targetFramework="net7.0">
-                <dependency id="Xamarin.FFImageLoading.NET" version="1.0.0" />
+			<group targetFramework="net8.0">
+                <dependency id="Xamarin.FFImageLoading.NET" version="1.0.1" />
 			</group>	
               
         </dependencies>
@@ -49,17 +49,18 @@ Don't forget to add the package in all platform specific projects. This way the 
 		<file src="..\README.md" target="" />
 		<file src="..\LICENSE.txt" target="" />
 		<!--Net Standard-->
-        <file src="..\source\FFImageLoading.Transformations\bin\Release\net7.0\FFImageLoading.Transformations.dll" target="lib\net7.0\FFImageLoading.Transformations.dll" />
-        <file src="..\source\FFImageLoading.Transformations\bin\Release\net7.0\FFImageLoading.Transformations.xml" target="lib\net7.0\FFImageLoading.Transformations.xml" />
+        <file src="..\source\FFImageLoading.Transformations\bin\Release\net8.0\FFImageLoading.Transformations.dll" target="lib\net8.0\FFImageLoading.Transformations.dll" />
+        <file src="..\source\FFImageLoading.Transformations\bin\Release\net8.0\FFImageLoading.Transformations.xml" target="lib\net8.0\FFImageLoading.Transformations.xml" />
+        <file src="..\source\FFImageLoading.Transformations\bin\Release\net8.0\FFImageLoading.Transformations.pdb" target="lib\net8.0\FFImageLoading.Transformations.pdb" />
           
 		<!--Xamarin.Android-->
-		<file src="..\source\FFImageLoading.Transformations.Droid\bin\Release\net7.0-android\FFImageLoading.Transformations.dll" target="lib\net7.0-android33.0\FFImageLoading.Transformations.dll" />
-        <file src="..\source\FFImageLoading.Transformations.Droid\bin\Release\net7.0-android\FFImageLoading.Transformations.xml" target="lib\net7.0-android33.0\FFImageLoading.Transformations.xml" />
-        <file src="..\source\FFImageLoading.Transformations.Droid\bin\Release\net7.0-android\FFImageLoading.Transformations.pdb" target="lib\net7.0-android33.0\FFImageLoading.Transformations.pdb" />
+		<file src="..\source\FFImageLoading.Transformations.Droid\bin\Release\net8.0-android\FFImageLoading.Transformations.dll" target="lib\net8.0-android34.0\FFImageLoading.Transformations.dll" />
+        <file src="..\source\FFImageLoading.Transformations.Droid\bin\Release\net8.0-android\FFImageLoading.Transformations.xml" target="lib\net8.0-android34.0\FFImageLoading.Transformations.xml" />
+        <file src="..\source\FFImageLoading.Transformations.Droid\bin\Release\net8.0-android\FFImageLoading.Transformations.pdb" target="lib\net8.0-android34.0\FFImageLoading.Transformations.pdb" />
             
 		<!--Xamarin.iOS-->
-		<file src="..\source\FFImageLoading.Transformations.Touch\bin\Release\net7.0-ios\FFImageLoading.Transformations.dll" target="lib\net7.0-ios16.1\FFImageLoading.Transformations.dll" />
-        <file src="..\source\FFImageLoading.Transformations.Touch\bin\Release\net7.0-ios\FFImageLoading.Transformations.xml" target="lib\net7.0-ios16.1\FFImageLoading.Transformations.xml" />
-        <file src="..\source\FFImageLoading.Transformations.Touch\bin\Release\net7.0-ios\FFImageLoading.Transformations.pdb" target="lib\net7.0-ios16.1\FFImageLoading.Transformations.pdb" />
+		<file src="..\source\FFImageLoading.Transformations.Touch\bin\Release\net8.0-ios\FFImageLoading.Transformations.dll" target="lib\net8.0-ios17.2\FFImageLoading.Transformations.dll" />
+        <file src="..\source\FFImageLoading.Transformations.Touch\bin\Release\net8.0-ios\FFImageLoading.Transformations.xml" target="lib\net8.0-ios17.2\FFImageLoading.Transformations.xml" />
+        <file src="..\source\FFImageLoading.Transformations.Touch\bin\Release\net8.0-ios\FFImageLoading.Transformations.pdb" target="lib\net8.0-ios17.2\FFImageLoading.Transformations.pdb" />
 	</files>
 </package>
